tests/NormalTests/paczka1/fuzzy1/45502264.err
Error in line 8: A530 ^795 53,5
Error in line 11: MdT8tL9Q1Fm S961 24,1
Error in line 20: Ecc8z6pCY S795 35,6
Error in line 21: Ecc8z6pCY A391 46,2
Error in line 31: Ecc8z6CY S961 169,7
Error in line 26: Ecc8z6pCY S961 44,9
